# optima_core

./: .gitignore  README.md  pyproject.toml
myproject/: settings.py
