[tool.poetry]
name = "optima_core"
version = "0.1.0"
description = ""
authors = ["ryan <zufirka@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "5.1.4"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
whitenoise = "^6.8.2"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
